# unlustig

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: RPC_ID  error.rs  main.rs  rich_presence.rs
src/utils/: args.rs  gif.rs  image.rs  mod.rs  video.rs
