[package]
name = "unlustig"
version = "0.0.7"
edition = "2021"
authors = ["blitzxd"]

description = "iFunny GIF Caption maker, but this time, its in Rust."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.4", features = ["derive"] } 
colored = "2.0.0"

image = "0.23.14"
imageproc = {git = "https://github.com/image-rs/imageproc", version = '0.22.0'} 
klask = "1.0.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rayon = "1.5.1"
rusttype = "0.9.2"
thiserror = "1.0.30"
